Add custome dialog

--- a/WebBased/BlazorAppServer/BlazorAppServer.csproj
+++ b/WebBased/BlazorAppServer/BlazorAppServer.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AKM.Component\AKM.Component.csproj" />
     <ProjectReference Include="..\EBazarModels\EBazarModels.csproj" />
   </ItemGroup>
 
