--- a/WebBased/BlazorAppServer/BlazorAppServer.csproj
+++ b/WebBased/BlazorAppServer/BlazorAppServer.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -22,6 +22,10 @@
   <ItemGroup>
     <ProjectReference Include="..\AKM.Component\AKM.Component.csproj" />
     <ProjectReference Include="..\EBazarModels\EBazarModels.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Helpers\" />
   </ItemGroup>
 
 </Project>
